# textured_avatars

./: Dockerfile  README.md  build_stickman.sh  infer.py  run.sh  test.py
data/keypoints/person_1/: 100000.json  100001.json  100002.json  100003.json  100004.json  100005.json  100006.json  100007.json  100008.json  100009.json
data/keypoints/person_2/: 100000.json  100001.json  100002.json  100003.json  100004.json  100005.json  100006.json  100007.json  100008.json  100009.json
models/: common.py  texture_model.py  translation_generator.py
stickman_drawer/: CMakeLists.txt  Makefile  README.md  lists.hpp  stickman.cpp  stickman.hpp  stickman.i  stickman_test.cpp
stickman_drawer/python/: stickman_test.py
